navbar fix and scrollbar styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+    color: #151515;
+    background: #daf6ff;
+}
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #8e8e90 transparent;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 3px;
+}
+
+*::-webkit-scrollbar-track {
+    background: none;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #8e8e90;
+    border-radius: 14px;
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    -webkit-tap-highlight-color: transparent;
+}
+
 html,
 body {
     height: 100%;
